# player

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  wallpaper.html
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/apis/: index.ts
src/components/: svg.tsx
src/components/download/: DownloadQueue.tsx
src/components/layout/: drawer.tsx
src/components/playlist/: table.tsx
src/hooks/: router.ts
src/interfaces/: api.ts
src/layout/: footer.tsx  header.tsx  sider.tsx
src/pages/: index.less  index.tsx
src/pages/download/: index.tsx
src/pages/history/: index.tsx
src/pages/music/: index.tsx
src/pages/playlist/: index.less  index.tsx
src/pages/square/: index.tsx
src/store/: cache.ts  downloadList.ts  music.ts  user.ts
src/utils/: index.ts  path.ts  store.ts
src/wall/: app.tsx  index.css  index.ts  index.tsx
